test/files/neg/t6217.check
t6217.scala:11: warning: _root_ in root position of qualifier refers to the root package, not package _root_ in package p, which is in scope
    import _root_.scala.Option
           ^
error: No warnings can be incurred under -Werror.
1 warning
1 error
